--- a/gemspec.yml
+++ b/gemspec.yml
@@ -4,7 +4,7 @@ description: Ruby FFI bindings for liborcon.
 license: MIT
 authors: Postmodern
 email: postmodern.mod3@gmail.com
-homepage: http://github.com/sophsec/ffi-lorcon
+homepage: https://github.com/sophsec/ffi-lorcon
 has_yard: true
 
 requirements: liborcon
