--- a/gemspec.yml
+++ b/gemspec.yml
@@ -7,7 +7,7 @@ email: postmodern.mod3@gmail.com
 homepage: https://github.com/sophsec/ffi-lorcon
 has_yard: true
 
-requirements: liborcon
+requirements: liborcon >= 2.0.0
 
 dependencies:
   ffi: ~> 1.0
