--- a/gemspec.yml
+++ b/gemspec.yml
@@ -1,6 +1,6 @@
 name: ffi-lorcon
-summary: Ruby FFI bindings for liborcon.
-description: Ruby FFI bindings for liborcon.
+summary: Ruby FFI bindings for Lorcon.
+description: Ruby FFI bindings for Lorcon.
 license: MIT
 authors: Postmodern
 email: postmodern.mod3@gmail.com
